Add images, text and video content to exercise page and styled it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,3 +112,9 @@ h2 {
     text-align: left;
     padding-top: 60px;
 }
+
+#breathing-video {
+    width: 800px;
+    height: 450px;
+    margin-left: 0%;
+}
