Add form content for sign up page and fixed navigation order on all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ h2 {
     margin-right: 5px;
 }
 
-.poses-intro {
+.exercises-intro {
     margin-left: 5px;
     font-size: 20px;
     text-align: left;
