Fix the CSS validator errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,7 +245,7 @@ h2 {
 
     #poses {
         margin-left: 2px;
-        margin: right 2px;
+        margin-right:2px;
     }
 
     #hero-video {
